# hermes-eval

./: .gitignore  .pre-commit-config.yaml  EVIDENCE.md  FLEET.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  eval-gate.yml  scorecard.yml
deploy/: com.igor.hermes-distill-accumulate.plist  com.igor.hermes-litellm.plist  hermes-integration.md
docs/: FINE-TUNING-RESEARCH-2026-07.md  FLEET-SETUP-RESEARCH-2026-07.md  TINKER-SETUP.md
eval/: compare_baseline.py  compare_profiles.py  golden.jsonl  judge_labels.example.jsonl  load_golden.py  mine_failures.py  promptfooconfig.ci.yaml  promptfooconfig.local.yaml  promptfooconfig.yaml  rubric.txt  run_gate.sh  summarize_errors.py  synth_golden.py  validate_judge.py  wrap_profile_run.py
eval/corpus/: pricing.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
litellm/: .env.example  competence_probe.py  config.yaml  hermes_logger.py  start-proxy.sh
scripts/: build-distill-dataset.py  prepare-tinker-holdout.py  rotate-traffic-log.sh  tinker_deploy.py  tinker_proof_run.py  tinker_training_data.py  verify.sh
tests/: test_ci_eval_config.py  test_compare_baseline.py  test_compare_profiles.py  test_competence_probe.py  test_hermes_logger.py  test_load_golden.py  test_mine_failures.py  test_prune_stale_tool_outputs.py  test_summarize_errors.py  test_tinker_deploy.py  test_tinker_training_data.py  test_wrap_profile_run.py
